filter fixed on firefox

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -186,8 +186,7 @@ a {
     }
     
     .grey {
-        filter: url(filters.svg#grayscale);
-        filter: gray;
+        filter: grayscale(1);
         -webkit-filter: grayscale(1);
     }
 
